# RtmpDumpX264Faac

./: faacbuild.sh  settings.gradle  x264build.sh
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/rtmpdumpx264faac/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioChannel.cpp  CMakeLists.txt  VideoChannel.cpp  VideoChannel.h  native-lib.cpp  safe_queue.cpp  safe_queue.h
app/src/main/cpp/librtmp/: CMakeLists.txt
app/src/main/java/com/example/rtmpdumpx264faac/: LivePusher.java  MainActivity.java
app/src/main/java/com/example/rtmpdumpx264faac/meida/: AudioChannel.java  CameraHelper.java  VideoChannel.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/rtmpdumpx264faac/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
